[gd_scene load_steps=6 format=3 uid="uid://8anyinpimvx2"]

[ext_resource type="Script" path="res://music/music_debug.gd" id="1_s6n1t"]
[ext_resource type="PackedScene" uid="uid://3lris5j0nmj4" path="res://music/music_player/music_player.tscn" id="3_6yfmu"]
[ext_resource type="Script" path="res://music/audio_file_scanner.gd" id="4_bmwd3"]
[ext_resource type="Resource" uid="uid://n7kwolshtjnv" path="res://music/default_song.tres" id="4_wsf3p"]

[sub_resource type="Curve" id="Curve_jp8ki"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="MusicTestScene" type="Node2D"]

[node name="SongScanner" type="Node" parent="."]
script = ExtResource("4_bmwd3")

[node name="InputListener" type="Node" parent="."]

[node name="Control" type="Control" parent="." node_paths=PackedStringArray("song_scanner")]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_s6n1t")
song_scanner = NodePath("../SongScanner")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 181.0
offset_top = 47.0
offset_right = 979.0
offset_bottom = 601.0
alignment = 1

[node name="LoadFileContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/VBoxContainer/LoadFileContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.43
text = "Audio File:"
horizontal_alignment = 2

[node name="FileSelect" type="OptionButton" parent="Control/VBoxContainer/LoadFileContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0

[node name="LoadSongBtn" type="Button" parent="Control/VBoxContainer/LoadFileContainer"]
layout_mode = 2
text = "Load Into Scene
"

[node name="Controls" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="PlayContainer" type="VBoxContainer" parent="Control/VBoxContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="Control/VBoxContainer/Controls/PlayContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="Control/VBoxContainer/Controls/PlayContainer/ButtonsContainer"]
layout_mode = 2
text = "Play"

[node name="StopButton" type="Button" parent="Control/VBoxContainer/Controls/PlayContainer/ButtonsContainer"]
layout_mode = 2
text = "Stop
"

[node name="PlayLoopStartButton" type="Button" parent="Control/VBoxContainer/Controls/PlayContainer/ButtonsContainer"]
layout_mode = 2
text = "Loop Start"

[node name="TestLoopButton" type="Button" parent="Control/VBoxContainer/Controls/PlayContainer/ButtonsContainer"]
layout_mode = 2
text = "Loop End
"

[node name="LoopStartContainer" type="HBoxContainer" parent="Control/VBoxContainer/Controls/PlayContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/Controls/PlayContainer/LoopStartContainer"]
layout_mode = 2
text = "Edit Loop Start"

[node name="LoopStartEdit" type="LineEdit" parent="Control/VBoxContainer/Controls/PlayContainer/LoopStartContainer"]
layout_mode = 2

[node name="LoopEndContainer" type="HBoxContainer" parent="Control/VBoxContainer/Controls/PlayContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/Controls/PlayContainer/LoopEndContainer"]
layout_mode = 2
text = "Edit Loop End"

[node name="LoopEndEdit" type="LineEdit" parent="Control/VBoxContainer/Controls/PlayContainer/LoopEndContainer"]
layout_mode = 2

[node name="TweakContainer" type="VBoxContainer" parent="Control/VBoxContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FineTuneContainer" type="HBoxContainer" parent="Control/VBoxContainer/Controls/TweakContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/Controls/TweakContainer/FineTuneContainer"]
layout_mode = 2
text = "Search width (s):
"

[node name="StepEdit" type="LineEdit" parent="Control/VBoxContainer/Controls/TweakContainer/FineTuneContainer"]
layout_mode = 2
text = "2.0"
placeholder_text = "2.0"

[node name="ResetBtn" type="Button" parent="Control/VBoxContainer/Controls/TweakContainer/FineTuneContainer"]
layout_mode = 2
text = "Reset"

[node name="StartTune" type="HBoxContainer" parent="Control/VBoxContainer/Controls/TweakContainer"]
layout_mode = 2
alignment = 2

[node name="StartRushBtn" type="Button" parent="Control/VBoxContainer/Controls/TweakContainer/StartTune"]
layout_mode = 2
text = "Start rushes
"

[node name="StartDragBtn" type="Button" parent="Control/VBoxContainer/Controls/TweakContainer/StartTune"]
layout_mode = 2
text = "Start drags"

[node name="EndTune" type="HBoxContainer" parent="Control/VBoxContainer/Controls/TweakContainer"]
layout_mode = 2
alignment = 2

[node name="EndRushBtn" type="Button" parent="Control/VBoxContainer/Controls/TweakContainer/EndTune"]
layout_mode = 2
text = "End rushes"

[node name="EndDragBtn" type="Button" parent="Control/VBoxContainer/Controls/TweakContainer/EndTune"]
layout_mode = 2
text = "End drags"

[node name="ProgressContainer" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ProgressSlider" type="HSlider" parent="Control/VBoxContainer/ProgressContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.0
scrollable = false

[node name="TimeLabel" type="Label" parent="Control/VBoxContainer/ProgressContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "00:00 / 00:00"

[node name="VolumeContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/VolumeContainer"]
layout_mode = 2
text = "Volume:"

[node name="VolumeSlider" type="HSlider" parent="Control/VBoxContainer/VolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.0
value = 1.0
scrollable = false

[node name="SaveFileContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/VBoxContainer/SaveFileContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.43
text = "Resource File Path:
"
horizontal_alignment = 2

[node name="FilePath" type="LineEdit" parent="Control/VBoxContainer/SaveFileContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0

[node name="SaveSongBtn" type="Button" parent="Control/VBoxContainer/SaveFileContainer"]
layout_mode = 2
text = "Save Resource"

[node name="MusicPlayer" parent="Control" instance=ExtResource("3_6yfmu")]
current_song = ExtResource("4_wsf3p")
song_transition_curve = SubResource("Curve_jp8ki")
